[package]
name = "text-server"
version = "0.1.0"
authors = ["Jonathan Whittle <jw@notanemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
failure = "0.1.6"
reqwest = "0.9.24"
